<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="full_app_name">PasswordMaker Pro</string>
    <string name="app_name">PWMP</string>
    <string name="Password">Password</string>
    <string name="MasterPassword">Master Password</string>
    <string name="MasterPwdVerification">Master Password Verification Code</string>
    <string name="Input">Input Text</string>
    <string name="LblCharSet">Character Set</string>
    <string name="LblCopy">Copy</string>
    <string name="Save">Save</string>
    <string name="AddProfile">Create</string>
    <string name="Cancel">Cancel</string>
    <string name="chkProtocol">Protocol</string>
    <string name="chkSubdomain">Subdomain</string>
    <string name="chkOthers">Port, path, anchor, query parameters</string>
    <string name="AddFavorite">Add new</string>

    <string-array name="LeetOptions">
        <item>Not At All</item>
        <item>Before Generating Password</item>
        <item>After Generating Password</item>
        <item>Before And After Generating Password</item>
    </string-array>
    <!-- This must match AlgorithmSelectionValues enum Position argument -->
    <string-array name="HashAlgos">
        <item>MD4</item>
        <item>HMAC MD4</item>
        <item>MD5</item>
        <item>MD5 V 0.6</item>
        <item>HMAC MD5</item>
        <item>HMAC MD5 V 0.6</item>
        <item>SHA 1</item>
        <item>HMAC SHA 1</item>
        <item>SHA 256</item>
        <item>HMAC SHA 256</item>
        <item>RIPEMD 160</item>
        <item>HMAC RIPEMD 160</item>
    </string-array>
    <string-array name="LeetLevel">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
        <item>Level 5</item>
        <item>Level 6</item>
        <item>Level 7</item>
        <item>Level 8</item>
        <item>Level 9</item>
    </string-array>

    <string name="PasswordLength">Password Length</string>

    <string-array name="NamedCharSets">
        <item>Alpha Number Symbols</item>
        <item>Alpha Num</item>
        <item>Hex number</item>
        <item>Number</item>
        <item>Alpha</item>
        <item>Symbols</item>
        <item>Custom (Enter your own)</item>
    </string-array>

    <string name="LblPrefix">Prefix</string>
    <string name="LblSuffix">Suffix</string>
    <string name="LblProfile">Profile:</string>
    <string name="LblProfileName">Name</string>
    <string name="LblUseUrlParts">URL Parts to use</string>
    <string name="LblLeetOptions">Use leet</string>
    <string name="LblLeetLevel">Leet Level</string>
    <string name="Lblusername">Username</string>
    <string name="LblModifier">Modifier</string>
    <string name="chkDomain">Domain</string>
    <string name="SaveInputs">Save Input</string>
    <string name="lblHashAlgo">Hash Algo</string>
    <string name="action_profiles">Profiles</string>
    <string name="action_favorites">Favorites</string>
    <string name="title_account_list">Profiles</string>
    <string name="title_account_detail">Profile Detail</string>
    <string name="title_activity_edit_favorites">Edit Favorites</string>
    <string name="action_favs_add">Add</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_button">Delete</string>
    <string name="title_patterndata_list">PatternData</string>
    <string name="title_patterndata_detail">PatternData Detail</string>
    <string name="lblPatternDesc">Description</string>
    <string name="patternWildCard">Wildcard</string>
    <string name="patternRegex">Regular Expression</string>
    <string name="lblPatternExpression">Expression</string>
    <string name="chkPatternEnabled">Enabled</string>
    <string name="btnShowPatterns">Show Patterns</string>
    <string name="title_activity_import_export_rdf">ImportExportRdf</string>
    <string name="BtnRdfImport">Import</string>
    <string name="BtnRdfExport">Export</string>
    <string name="lblImportInstructions">The import process is destructive.  It will replace any account already in Passwordmaker.  To import first copy the RDF document to your clipboard.  Then click the Import button below.
      To Export, click the export button. It will then copy the RDF document to the clipboard.</string>
    <string name="action_import_export">Import/Export</string>
    <string name="action_account_add">add</string>
    <string name="action_pattern_add">Add</string>
    <string name="LblUseText">Use Text</string>
    <string name="lblConvertBuggyAlgo">The javascript/firefox versions contains \'HMAC-SHA-256 V 1.5.1\' which was a buggy implementation of the hash algo.  The JVM does not support this, and the developer for the android version is too lazy to implement it himself.  You can try to \'convert\' to the nearest algo type, but it may not generate the same password always.</string>
    <string name="action_account_folder_add">Create Folder</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="lbl_domain_regex">Domain Regex</string>
    <string name="delete_confirmation_text">Delete pattern</string>
    <string name="chkConvertBadAlgo">Convert Buggy Javascript Algo</string>
    <string name="btnClearSelectedProfile">Clear</string>
    <string name="deleteAccount">Delete</string>
    <string name="UseAccount">Use</string>

    <string-array name="saveInputAmount">
        <item>Never</item>
        <item>1 minute</item>
        <item>5 minute</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>Forever</item>
    </string-array>
    <string-array name="saveInputAmountValues">
        <item>0</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>31557600</item>
    </string-array>

    <string name="saveInputAmountDefaultValue">99999999</string>
    <string name="MasterPasswordSummary">Set the master password hash to verify password.</string>
    <string name="showUsername">Show username for accounts</string>
    <string name="showPasswordStrength">Show password strength</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lblNotes">Notes</string>
    <string name="defaultProgressValue">0</string>
    <string name="ViewAccount">View Account</string>
    <string name="ViewAccountShort">View</string>
    <string name="autoAddTextToFavs">Auto Add Input to Favorites</string>

</resources>
