<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical"
        android:id="@+id/scrollView1">
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="true"  android:orientation="vertical">
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/lblName" android:text="@string/LblProfileName"/>
        <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/txtName"
                  android:inputType="textNoSuggestions">
            <requestFocus/>
        </EditText>
        <LinearLayout android:id="@+id/frameUrlParts" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
            <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/lblUrlParts" android:text="@string/LblUseUrlParts"/>
            <LinearLayout android:id="@+id/frameUrlPartsInner" android:layout_height="wrap_content" android:layout_width="fill_parent">
                <CheckBox android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/chkProtocol" android:id="@+id/chkProtocol"/>
                <CheckBox android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/chkSubdomain" android:id="@+id/chksubdomain"/>
                <CheckBox android:id="@+id/chkDomain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/chkDomain"/>
            </LinearLayout>
            <CheckBox android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/chkOthers" android:id="@+id/chkOthers"/>
        </LinearLayout>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/lblUseUrl" android:text="@string/LblUseUrl"/>
        <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/txtUseUrl" android:inputType="textNoSuggestions|textUri"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/lblLeetOptions" android:text="@string/LblLeetOptions"/>
        <Spinner android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/selectLeet" android:entries="@array/LeetOptions"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/lblLeetLevel" android:text="@string/LblLeetLevel"/>
        <Spinner android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/spinLeetLevel" android:entries="@array/LeetLevel"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/lblHashAlgo"/>
        <Spinner android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/selectHashAlgos" android:entries="@array/HashAlgos"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/lblPassLen" android:text="@string/PasswordLength"/>
        <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/txtPswordLen"  android:inputType="text|number"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/lblUsername" android:text="@string/Lblusername"/>
        <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/txtUsername" android:inputType="textNoSuggestions"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/lblModifer" android:text="@string/LblModifier"/>
        <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/txtModifier" android:inputType="textNoSuggestions"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblCharacterSet" android:text="@string/LblCharSet"/>
        <Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/selectCharacterSet" android:entries="@array/NamedCharSets"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCustomCharacterSet"
                android:textIsSelectable="true"
                android:inputType="text|textNoSuggestions"/>

        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblPrefix" android:text="@string/LblPrefix"/>
        <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtPrefix" android:inputType="textNoSuggestions"/>
        <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblSuffix" android:text="@string/LblSuffix"/>
        <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtSuffix" android:inputType="textNoSuggestions"/>

        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btnShowPatterns" android:id="@+id/btnShowPatterns"/>
    </LinearLayout>
</ScrollView>